# cctools

./: meson.build  meson_options.txt
EXTERNAL_HEADERS/: libcodedirectory.c  libcodedirectory.h  meson.build
EXTERNAL_HEADERS/corecrypto/: cc.h  cc_config.h  cc_error.h  ccdigest.h  ccn.h  ccsha2.h
EXTERNAL_HEADERS/non-darwin/: libc.h  meson.build  port.c
EXTERNAL_HEADERS/non-darwin/libkern/: OSByteOrder.h
EXTERNAL_HEADERS/non-darwin/mach/: boolean.h  mach.h  mach_init.h  mach_types.h  message.h  vm_attributes.h  vm_prot.h  vm_types.h
EXTERNAL_HEADERS/non-darwin/mach/machine/: boolean.h  vm_types.h
ar/: contents.c  meson.build
as/: meson.build  obstack.c  write_object.c
as/arm/: meson.build
as/i386/: meson.build
as/x86_64/: meson.build
include/: meson.build
include/gnu/: meson.build
include/mach-o/: loader.h  reloc.h
include/mach/i386/: thread_state.h
include/stuff/: meson.build
libstuff/: code_directory.c  errors.c  fatals.c  get_arch_from_host.c  meson.build  ofile.c  writeout.c
man/: meson.build
misc/: codesign_allocate.c  libtool.c  lipo.c  meson.build  segedit.c  strip.c
otool/: dyld_bind_info.c  meson.build
