as_inc = [include_directories('.')]

as_driver_srcs = files('driver.c')

as_srcs = files('hash.c', 'messages.c', 'xmalloc.c', 'app.c', 'flonum-copy.c',
  'layout.c', 'as.c', 'frags.c', 'atof-ieee.c', 'flonum-mult.c', 'symbols.c',
  'dwarf2dbg.c', 'expr.c', 'input-scrub.c', 'atof-generic.c', 'fixes.c', 'read.c',
  'write_object.c', 'flonum-const.c', 'obstack.c', 'sections.c', 'hex-value.c', 'input-file.c')

as_arm_srcs = files('arm.c')
as_i386_srcs = files('i386.c')
