libstuff_srcs = files('swap_headers.c', 'rnd.c', 'hash_string.c', 'arch_usage.c', 'hppa.c',
  'symbol_list.c', 'checkout.c', 'arch.c', 'crc32.c', 'set_arch_flag_name.c', 'fatals.c',
  'align.c', 'breakout.c', 'guess_short_name.c', 'print.c', 'xcode.c', 'errors.c', 'fatal_arch.c',
  'ofile.c', 'allocate.c', 'get_toc_byte_sex.c', 'apple_version.c', 'lto.c', 'coff_bytesex.c',
  'best_arch.c', 'unix_standard_mode.c', 'dylib_roots.c', 'args.c', 'llvm.c', 'diagnostics.c',
  'macosx_deployment_target.c', 'code_directory.c', 'writeout.c', 'bytesex.c', 'version_number.c',
  'SymLoc.c', 'ofile_get_word.c', 'execute.c', 'get_arch_from_host.c', 'depinfo.c', 'ofile_error.c',
  'write64.c', 'reloc.c')

otool_classic_srcs = files('ofile.c')
