bitcode_strip_srcs = files('bitcode_strip.c')
cmpdylib_srcs = files('cmpdylib.c')
codesign_allocate_srcs = files('codesign_allocate.c')
ctf_insert_srcs = files('ctf_insert.c')
install_name_tool_srcs = files('install_name_tool.c')
libtool_srcs = files('libtool.c')
lipo_srcs = files('lipo.c')
nm_classic_srcs = files('nm.c')
nmedit_srcs = files('strip.c')
pagestuff_srcs = files('pagestuff.c')
segedit_srcs = files('segedit.c')
size_classic_srcs = files('size.c')
strings_srcs = files('strings.c')
strip_srcs = files('strip.c')
