llvm_otool_srcs = files('main.c')

otool_classic_srcs += files('print_objc2_util.c', 'main.c', 'i386_disasm.c',
  'print_objc2_32bit.c', 'arm_disasm.c', 'i860_disasm.c', 'ofile_print.c',
  'print_objc2_64bit.c', 'm88k_disasm.c', 'ppc_disasm.c', 'print_bitcode.c',
  'dyld_bind_info.c', 'sparc_disasm.c', 'm68k_disasm.c', 'arm64_disasm.c',
  'hppa_disasm.c', 'coff_print.c', 'print_objc.c')

otool_classic_inc = include_directories('.')
